www/ui/templates/sidebar-entry.css
:host(sidebar-entry) {
    [data-type-icon]::before {
        content: attr(data-type-icon) " "
    }

    [part="root"] {
        container-type: inline-size;

        @container body (width < 800px) {
            width: 25vw;
            height: min-content;
            aspect-ratio: initial;
        }
    }

    #sidebar-title {
        font-size: 0.8em;
        width: 80%;

        border-style: none;

        @container body (width >=800px) {
            text-align: center;
        }
    }

    figure {
        gap: 0.4em;
        margin: 0;

        contain: inline-size;

        @container body (width >=800px) {
            display: grid;
            justify-items: center;
        }

        @container body (width < 800px) {
            display: grid;
            justify-items: center;

            gap: 0;
        }

        & > button:first-of-type {
            min-height: 70cqi;
            width: fit-content;
            height: fit-content;
            padding: 0;
            border: none;
            background: transparent;

            @container body (width < 800px) {
                min-height: revert;
            }
        }

        button {
            align-self: center;
        }
    }

    #sidebar-thumbnail {
        cursor: pointer;
        /* set a range instead of specific sizes, so that the image can resize to a good size, and so that the image fits within the size of the sidebar */
        min-height: 50cqi;
        max-height: 70cqi;
        max-width: 100cqi;

        @container body (width < 800px) {
            justify-self: center;
        }
    }

    #sidebar-thumbnail:not([src]) {
        height: 70cqb;
    }

    button:focus {
        outline: auto;
    }
}

